--- a/Content/Scientific/participants.html
+++ b/Content/Scientific/participants.html
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -96,6 +97,7 @@ Here is the list of registered participants.
 <li>Kaltenbäck Michael (<em>TU Wien, Austria</em>)</li>
 <li>Karlovich Yuri (<em>Universidad Autónoma del Estado de Morelos, Mexico</em>)</li>
 <li>Kheifets Alexander (<em>University of Massachusetts Lowell, USA</em>)</li>
+<li>Kostenko Aleksey (<em>TU Wien, Austria</em>)</li>
 <li>Kuijlaars Arno (<em>Katholieke Universiteit Leuven, Belgium</em>)</li>
 <li>Langer Matthias (<em>University of Strathclyde, UK</em>)</li>
 <li>Le Thi Minh Thao (<em>Masaryk University, Czech Republic</em>)</li>
@@ -105,7 +107,6 @@ Here is the list of registered participants.
 <li>Ly Hong Hai (<em>University of Ostrava, Czech Republic</em>)</li>
 <li>Malamud Mark</li>
 <li>Mantile Andrea (<em>Université de Reims, France</em>)</li>
-<li>Meradjah Ibrahim (<em>Djillali Liabes University, Algeria</em>)</li>
 <li>Moalla Nedra (<em>University of Sfax, Tunisia </em>)</li>
 <li>Muranova Anna (<em>University of Warmia and Mazury in Olsztyn, Poland</em>)</li>
 <li>Nguyen Phuoc-Tai (<em>Masaryk University Brno, Czech Republic</em>)</li>
@@ -124,7 +125,6 @@ Here is the list of registered participants.
 <li>Teng Wentao (<em>University of Tokyo, Japan</em>)</li>
 <li>Tretter Christiane (<em>Universität Bern, Switzerland</em>)</li>
 <li>Woracek Harald (<em>TU Wien, Austria</em>)</li>
-<li>Yang Shiwu (<em>Peking University, China</em>)</li>
 <li>Young Giorgio (<em>The University of Michigan, USA</em>)</li>
 <li>Yuditskii Peter (<em>JKU Linz, Austria</em>)</li>
 <li>Zhang Yifan (<em>University of Ostrava, Czech Republic</em>)</li>
@@ -132,6 +132,11 @@ Here is the list of registered participants.
 </ol>
 
 
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
