--- a/Content/Scientific/program-PRE.html
+++ b/Content/Scientific/program-PRE.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-<base href="..">
+<base href="../..">
 <title>Operator Theory and Approximation 2024</title>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/main.css"/>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/navigation.css"/>
@@ -28,7 +28,7 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">Scientific</button>
+	<button class="dropbtn-current">Scientific</button>
 	<div class="dropdown-content">
 	<a href="Content/Scientific/program.html">Program</a>
 	<a href="Content/Scientific/participants.html">Participants</a>
@@ -40,7 +40,7 @@
 	<a href="Content/registration.html">Registration</a>
 </td>
 <td class="navigation">
-	<a href="Content/abstract-submission.html" class="current">Abstract<br>submission</a>
+	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
 </td>
 <td class="navigation">
 	<div class="dropdown">
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -65,7 +66,16 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>Abstract submission is closed</h3>
+<h3>The conference program is not yet available</h3>
+
+
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
+
+
