--- a/Content/Scientific/program.html
+++ b/Content/Scientific/program.html
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -65,7 +66,18 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>The conference program is not yet available</h3>
+<h1>Conference schedule</h1>
+Here is a preliminary program (including the book of abstracts): 
+<p>
+<a href="./Downloads/Program__OTA2024.pdf" target="_blank">Program (updated 30.6)</a>.
+</p>
+
+
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
