--- a/Content/Scientific/talks-PRE.html
+++ b/Content/Scientific/talks-PRE.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-<base href="..">
+<base href="../..">
 <title>Operator Theory and Approximation 2024</title>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/main.css"/>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/navigation.css"/>
@@ -28,7 +28,7 @@
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">Scientific</button>
+	<button class="dropbtn-current">Scientific</button>
 	<div class="dropdown-content">
 	<a href="Content/Scientific/program.html">Program</a>
 	<a href="Content/Scientific/participants.html">Participants</a>
@@ -37,7 +37,7 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration.html" class="current">Registration</a>
+	<a href="Content/registration.html">Registration</a>
 </td>
 <td class="navigation">
 	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
@@ -66,9 +66,7 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>Registration is closed</h3>
-<br>
-If you did not manage to register in time but still want to attend the conference, contact us via the conference email adress.
+<h3>A list of talks is not yet available</h3>
 
 
 <!---   PAGE FOOT   --------------------------->
@@ -79,3 +77,5 @@ If you did not manage to register in time but still want to attend the conferenc
 
 </body>
 </html>
+
+
