--- a/Content/Venue/directions.html
+++ b/Content/Venue/directions.html
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -96,7 +97,7 @@
 	<li>FH HS 3 (stands for Freihaus H&ouml;rsaal 3)</li>
 	<li>FH HS 2 (stands for Freihaus H&ouml;rsaal 2)</li>
 	</ul>
-	These rooms are equipped with (very good) blackboards and a projector+computer but no windows. 
+	These rooms are equipped with (very good) blackboards and a projector+computer, but no windows. 
 	<br>
 	<br>
 	Further we use the following rooms which are located in the <em>green area</em> on the <em>3rd floor</em>. 
@@ -132,6 +133,13 @@
 </ol>
 <br>
 <br>
+
+
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
