--- a/Content/Venue/guided-tour.html
+++ b/Content/Venue/guided-tour.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-<base href="..">
+<base href="../..">
 <title>Operator Theory and Approximation 2024</title>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/main.css"/>
 <link rel="stylesheet" type="text/css" media="all" href="Styles/navigation.css"/>
@@ -37,14 +37,14 @@
 	</div>
 </td>
 <td class="navigation">
-	<a href="Content/registration.html" class="current">Registration</a>
+	<a href="Content/registration.html">Registration</a>
 </td>
 <td class="navigation">
 	<a href="Content/abstract-submission.html">Abstract<br>submission</a>
 </td>
 <td class="navigation">
 	<div class="dropdown">
-	<button class="dropbtn">Venue</button>
+	<button class="dropbtn-current">Venue</button>
 	<div class="dropdown-content">
 	<a href="Content/Venue/travel.html">Travel</a>
 	<a href="Content/Venue/accommodation.html">Accomodation</a>
@@ -66,9 +66,17 @@
 
 <!---   TEXTBODY   --------------------------->
 
-<h3>Registration is closed</h3>
+<h1>Guided tour</h1>
+On <em>Wednesday 10.7.2024</em> there will be a guided tour through the inner city. It starts 
+<em>Wednesday 10.7.2024, 18'00</em> and takes approximately 2 hours. We will meet at the Vienna state opera building 
+(Herbert-von-Karajan Platz, see <a href="./Downloads/Opera.png" target="_blank">this map</a>).
 <br>
-If you did not manage to register in time but still want to attend the conference, contact us via the conference email adress.
+<br>
+Everybody is welcome to participate. Please tell us if you want to participate on Monday 8.7 upon in-person registration. 
+If you arrive only later and want to participate, please send an email to conference email address 
+( <em>ota2024</em> (at) <em>tuwien.ac.at</em> ) until latest Monday 8.7, 10'00.
+<br>
+<br>
 
 
 <!---   PAGE FOOT   --------------------------->
