--- a/Content/downloads.html
+++ b/Content/downloads.html
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -66,11 +67,19 @@
 <!---   TEXTBODY   -------------------------->
 
 <ul>
+<!--- <li>Final announcement: <a href="Downloads/FinalAnnouncement.pdf" target="_blank">pdf</a></li> --->
 <li>LaTeX-template for abstract submission: <a href="Downloads/TemplateAbstract.tex" target="_blank">tex</a></li>
 <li>Third announcement: <a href="Downloads/3rdAnnouncement.pdf" target="_blank">pdf</a></li>
 <li>Second announcement: <a href="Downloads/2ndAnnouncement.pdf" target="_blank">pdf</a></li>
 <li>First announcement: <a href="Downloads/1stAnnouncement.pdf" target="_blank">pdf</a></li>
 </ul>
+
+
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
