--- a/Content/Venue/accommodation.html
+++ b/Content/Venue/accommodation.html
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -85,6 +86,13 @@ A few decent, resonably priced, and well located places are
 </ul>
 We recommend planning your trip well in advance. Though summer is not the most a popular and busy tourist period,
 hotels can be fully booked quite some time in advance. 
+
+
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
