--- a/Content/Venue/conference-dinner.html
+++ b/Content/Venue/conference-dinner.html
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -71,7 +72,7 @@ This restaurant is located in walking distance (<10 Minutes) from the university
 <a href="./Downloads/WiedenBraeu.png" target="_blank">this map</a>).
 <br>
 <br>
-Participants who attend the dinner can either get their on their own, or walk together with us. 
+Participants who who have registered to attend the dinner can either get their on their own, or walk together with us. 
 We will leave at 18'45 from the university. Meeting point for those who want to join is in front of the lecture halls 
 (2nd floor/yellow area/ HS 2,3).
 <br>
@@ -79,6 +80,13 @@ We will leave at 18'45 from the university. Meeting point for those who want to 
 At the restaurant there will be a small menue from which you can choose. 
 <br>
 <br>
+
+
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
