--- a/Content/Venue/public-transport.html
+++ b/Content/Venue/public-transport.html
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -95,6 +96,13 @@ Detailed information can be found at the website of the <em>Wiener Linien</em>, 
 This site includes a practical interactive journey planner (click on <em>Plan my journey</em> without filling the fields).
 <br><br><br>
 <small><sup>&dagger;</sup>Source: https://www.wienerlinien.at.</small>
+
+
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
