--- a/Content/keydates.html
+++ b/Content/keydates.html
@@ -51,6 +51,7 @@
 	<a href="Content/Venue/public-transport.html">Public transport in Vienna</a>
 	<a href="Content/Venue/directions.html">Directions at the TU Wien</a>
 	<a href="Content/Venue/conference-dinner.html">Conference Dinner</a>
+	<a href="Content/Venue/guided-tour.html">Guided tour</a>
 	<a href="Content/Venue/restaurants.html">About food</a>
 	</div>
 	</div>
@@ -69,6 +70,13 @@
 <h3>&rtri;&rtri; June 2, 2024: Registration closes / Conference fee must be paid</h3>
 <h3>&rtri;&rtri; June 23, 2024: Abstract submission closes</h3>
 <h3>&rtri;&rtri;&rtri; July 8--12, 2024: Conference</h3>
+
+
+<!---   PAGE FOOT   --------------------------->
+
+<object data="Templates/footer.html" 
+        type="text/html" width="1100" height="500px"
+        style="overflow:hidden; width: 1100px; height: 500px"></object>
 
 </body>
 </html>
