--- a/Content/downloads.html
+++ b/Content/downloads.html
@@ -67,7 +67,7 @@
 <!---   TEXTBODY   -------------------------->
 
 <ul>
-<!--- <li>Final announcement: <a href="Downloads/FinalAnnouncement.pdf" target="_blank">pdf</a></li> --->
+<li>Final announcement: <a href="Downloads/FinalAnnouncement.pdf" target="_blank">pdf</a></li>
 <li>LaTeX-template for abstract submission: <a href="Downloads/TemplateAbstract.tex" target="_blank">tex</a></li>
 <li>Third announcement: <a href="Downloads/3rdAnnouncement.pdf" target="_blank">pdf</a></li>
 <li>Second announcement: <a href="Downloads/2ndAnnouncement.pdf" target="_blank">pdf</a></li>
