--- a/Content/Scientific/talks.html
+++ b/Content/Scientific/talks.html
@@ -131,7 +131,7 @@ Bračič Janko:
 <em>Ultrainvariant subspaces</em>
 <br>
 Thursday 14’00 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Downloads/Abstracts/Bračič.pdf" target="_blank">Abstract</a>
+<a href="Downloads/Abstracts/Bracic.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li>
 <li>
@@ -258,7 +258,7 @@ Lukić Milivoje:
 <em>Universality limits via canonical systems</em>
 <br>
 Wednesday 10’00 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Downloads/Abstracts/Lukić.pdf" target="_blank">Abstract</a>
+<a href="Downloads/Abstracts/Lukic.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li>
 <li>
@@ -363,7 +363,7 @@ Tuesday 16’15 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
 efficients</em>
 <br>
 Monday 17’45 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Downloads/Abstracts/Świderski.pdf" target="_blank">Abstract</a>
+<a href="Downloads/Abstracts/Swiderski.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li>
 <li>
