--- a/index.html
+++ b/index.html
@@ -70,15 +70,22 @@
 
 This conference aims to bring together mathematicians working on spectral theory, complex analysis, approximation theory and 
 related areas, and provide a framework for scientific exchange.
-<p>
+<!---<p>
 Registration and submission of abstracts will open December 1, 2023, and should be done through this website.
+The standard conference fee is &euro; 200 (this includes: welcome coffee, the admission to all scientific sessions, 
+conference packages, room setup and use of audio/visual equipment, evening event in a typical Viennese Restaurant).
+The reduced conference fee is &euro; 130 (this includes: welcome coffee, the admission to all scientific sessions, 
+conference packages, room setup and use of audio/visual equipment).
+*****
 The registration fee is &euro; 200, which includes the conference dinner. Participants who plan to not attend the dinner, 
 should pay a reduced fee of &euro; 130.
+*****
 </p>
-Our funding is not yet settled. It might be that we can offer limited support for colleagues who could not attend otherwise.
+Our funding is not yet settled. It might be that we can offer limited support for colleagues who could not attend otherwise--->.
 <br><br>
-The conference program consists of invited talks (50 min + discussion) and contributed talks (25 min + discussion).
-<br>
+The conference program consists of invited talks (60 min including questions and discussion) and contributed talks (30 min
+including questions and discussion).
+<br><br>
 Confirmed plenary speakers are:
 <p>
 	Roman Bessonov
