--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@ With best regards, the organisers
 Benjamin Eichinger
 <br>
 Harald Woracek
+<br><br>
+<br><br>
+Acknowledgements:
+We thankfully acknowledge financial support by the Vienna Convention Bureau 
+(<a href="https://meeting.vienna.info/en" target=blank_>website</a>).
 
 
 <!---   PAGE FOOT   --------------------------->
