--- a/Content/Scientific/talks.html
+++ b/Content/Scientific/talks.html
@@ -83,7 +83,7 @@ Thursday 17’15 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
 Alexis Michel:
 <em>Quantum Signal Processing and the nonlinear Fourier Transform</em>
 <br>
-Monday 16’45 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
+Tuesday 15’00 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Downloads/Abstracts/Alexis.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li>
@@ -91,7 +91,7 @@ Monday 16’45 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
 Aslanova Nigar:
 <em>On one class eigenvalue problems for fourth order differential operator equation</em>
 <br>
-Monday 17’45 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
+Monday 17’15 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Downloads/Abstracts/Aslanova.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li>
@@ -107,7 +107,7 @@ Thursday 16’45 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
 Barkaoui Yosra:
 <em>Unbounded product of two non negative selfadjoint operators</em>
 <br>
-Monday 17’15 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
+Monday 16’45 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Downloads/Abstracts/Barkaoui.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li><li>
@@ -154,7 +154,7 @@ Tuesday 14’30 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
 Chen Chung-Chuan:
 <em>Recurrent operators on Orlicz spaces</em>
 <br>
-Monday 16’45 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
+Monday 15’30 (HS2) &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Downloads/Abstracts/Chen.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li>
@@ -228,7 +228,16 @@ Kuijlaars Arno:
 Thursday 9’30 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Downloads/Abstracts/Kuijlaars.pdf" target="_blank">Abstract</a>
 <br> <br>
-</li><li>
+</li>
+<li>
+Langer Matthias:
+<em>Canonical systems, Weyl coefficients and eigenvalues</em>
+<br>
+Friday 11’45 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
+<a href="Downloads/Abstracts/Langer.pdf" target="_blank">Abstract</a>
+<br> <br>
+</li>
+<li>
 Le Thi Minh Thao:
 <em>Cwikel-Lieb-Rozenblum type inequalities for Hardy-Schrödinger operator</em>
 <br>
@@ -322,7 +331,7 @@ Monday 15’30 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
 Reiffenstein Jakob:
 <em>Eigenvalue density of limit circle Jacobi operators and related canonical systems</em>
 <br>
-Monday 17’15 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
+Monday 16’45 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Downloads/Abstracts/Reiffenstein.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li>
@@ -362,7 +371,7 @@ Tuesday 16’15 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
 <em>Asymptotic zeros’ distribution of orthogonal polynomials with unbounded recurrence co-
 efficients</em>
 <br>
-Monday 17’45 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
+Monday 17’15 (HS3) &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="Downloads/Abstracts/Swiderski.pdf" target="_blank">Abstract</a>
 <br> <br>
 </li>
