--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ Harald Woracek
 <br><br>
 <br><br>
 Acknowledgements:
-We thankfully acknowledge financial support by the Vienna Convention Bureau 
-(<a href="https://meeting.vienna.info/en" target=blank_>website</a>).
+We thankfully acknowledge financial support by the 
+<a href="https://fwf.ac.at/en" target=blank_>Austrian Science Fund FWF</a>
+and the <a href="https://meeting.vienna.info/en" target=blank_>Vienna Convention Bureau</a>.
 
 
 <!---   PAGE FOOT   --------------------------->
