--- a/Content/downloads.html
+++ b/Content/downloads.html
@@ -67,6 +67,8 @@
 <!---   TEXTBODY   -------------------------->
 
 <ul>
+<li>Conference photo: <a href="Downloads/1.jpg" target="_blank">photo 1</a>, 
+	<a href="Downloads/2.jpg" target="_blank">photo 2</a></li>
 <li>Final announcement: <a href="Downloads/FinalAnnouncement.pdf" target="_blank">pdf</a></li>
 <li>LaTeX-template for abstract submission: <a href="Downloads/TemplateAbstract.tex" target="_blank">tex</a></li>
 <li>Third announcement: <a href="Downloads/3rdAnnouncement.pdf" target="_blank">pdf</a></li>
